--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             </div>
         </div>
       <div class="footer-left">
-            <img src="images/Taco-cheesington.png" alt="Taco Cheesington">
+            <img src="images/taco-cheesington.png" alt="Taco Cheesington">
             <p>COPYRIGHT 2022<br>TACO CHEESINGTON</p>
         </div>
     </div>
